# herdr-tally

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md  herdr-plugin.toml
.claude/skills/verify-herdr-version/: SKILL.md
.github/workflows/: release.yml
docs/media/: hero.tape  stills.tape  two-way.tape
docs/superpowers/plans/: 2026-07-09-tui-ux-polish.md  2026-07-10-comments-retrieval.md  2026-07-10-comments.md  2026-07-11-install-distribution.md  2026-07-12-github-issue-sync.md
docs/superpowers/specs/: 2026-07-09-tui-ux-polish-design.md  2026-07-10-comments-design.md  2026-07-10-comments-retrieval-design.md  2026-07-11-install-distribution-design.md  2026-07-12-github-issue-sync-design.md  2026-07-21-plan-paths-globs-design.md
scripts/: demo-seed.sh  fetch-or-build.sh  install.sh  on-worktree.sh  record-demo.sh  release.sh  toggle-pane.sh  verify-herdr.sh  verify.sh
src/: docs.rs  main.rs  plans.rs
src/cli/: comments.rs  mod.rs  render.rs  scratchpads.rs  sync.rs  todos.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/store/: comments.rs  errors.rs  ids.rs  lock.rs  mod.rs  project.rs  scratchpads.rs  sync.rs  testutil.rs  todos.rs
src/tui/: app.rs  markdown.rs  mod.rs  time.rs  view.rs
tests/: fetch-or-build.test.sh  install.test.sh
