[package]
name = "tally"
version = "0.1.1"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
edtui = "0.11.3"
libc = "0.2.186"
# unstable-rendered-line-info: Paragraph::line_count, used by the TUI to size
# wrapped titles and clamp read-mode scrolling.
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1_smol = "1.0.1"
tui-markdown = "0.3.8"
